# mdl-old

./: INSTALL  Makefile.am  Makefile.in  README  README_DEL  config.h.in  configure  configure.ac
math/: Makefile.am  Makefile.in  decompose.del  decomposition  dir_translation  grammar.corr  prop_tiny.mm  proving  solve.del  symbol.corr  translation
math/prop_tiny/: prop_tiny_proofless.mdl  prop_tiny_proved-1.mdl  prop_tiny_proved-2.mdl  prop_tiny_proved-2.smm  prop_tiny_proved.mdl  prop_tiny_proved.smm  prop_tiny_reprove.mdl  prop_tiny_reproved-1.mdl
math/prover/: Makefile.am  Makefile.in  benchmark  compress  compress~  configs~  run  translate  tune
math/prover/bijust/: learn.conf  result  src.mm  theorems  thm  thm_all  time
math/prover/conf/: compile  compress  learn  prove  prove_conf  translate  tuned  tuning  verify
math/prover/prop/: src.mm  src.rus  thm  time
math/prover/syl8/: learn.conf  result_old  src.mm  src.rus  thm  time
metamath/: Makefile.am  Makefile.in  metamath.c  mmall.c  mmall.h  mmcmdl.c  mmcmdl.h  mmcmds.c  mmcmds.h  mmdata.c  mmdata.h  mmhlpa.c  mmhlpa.h  mmhlpb.c  mmhlpb.h  mminou.c  mminou.h  mmmaci.c  mmmaci.h  mmpars.c  mmpars.h  mmpfas.c  mmpfas.h  mmunif.c  mmunif.h  mmutil.c  mmutil.h  mmveri.c  mmveri.h  mmvstr.c  mmvstr.h  mmword.c  mmword.h  mmwtex.c  mmwtex.h
src/del/: Makefile.am  Makefile.in  del.cpp  del.dpp  del.hpp  del_Del.cpp  del_Del.hpp  del_main.cpp
src/del/.deps/: del_main.Po
src/del/auxiliary/: Makefile  Makefile.am  Makefile.in  del_auxiliary.cpp  del_auxiliary.dpp  del_auxiliary.hpp  del_auxiliary_Config.cpp  del_auxiliary_Config.hpp  del_auxiliary_Error.cpp  del_auxiliary_Error.hpp  del_auxiliary_Log.cpp  del_auxiliary_Log.hpp  del_auxiliary_Output.cpp  del_auxiliary_Output.hpp  del_auxiliary_Statistics.cpp  del_auxiliary_Statistics.hpp  del_auxiliary_Statistics_Data.cpp  del_auxiliary_Statistics_Data.hpp  del_auxiliary_Table.cpp  del_auxiliary_Table.hpp  del_auxiliary_Timers.cpp  del_auxiliary_Timers.hpp  del_auxiliary_Timers.ipp  del_auxiliary_Volume.cpp  del_auxiliary_Volume.hpp
src/del/interface/: Makefile  Makefile.am  Makefile.in  del_interface.cpp  del_interface.dpp  del_interface.hpp  del_interface_Answer.hpp  del_interface_Assertion.hpp  del_interface_Cloneable.hpp  del_interface_Comments.hpp  del_interface_Decompose.hpp  del_interface_Decomposition.hpp  del_interface_Expansion.hpp  del_interface_Formula.cpp  del_interface_Formula.hpp  del_interface_Minimization.hpp  del_interface_Minimize.hpp  del_interface_Object.cpp  del_interface_Object.hpp  del_interface_Question.hpp  del_interface_Signature.hpp  del_interface_Source.hpp  del_interface_Symbol.cpp  del_interface_Symbol.hpp  del_interface_Term.hpp  del_interface_Theory.hpp  del_interface_Writable.cpp  del_interface_Writable.hpp
src/del/lexer/: Makefile  Makefile.am  Makefile.in  del_lexer.cpp  del_lexer.dpp  del_lexer.hpp  del_lexer_CommentScaner.cpp  del_lexer_CommentScaner.hpp  del_lexer_Lexer.cpp  del_lexer_Lexer.hpp  del_lexer_Lexer.ipp  del_lexer_NameScaner.hpp  del_lexer_PathScaner.hpp  del_lexer_Scaner.cpp  del_lexer_Scaner.hpp  del_lexer_Scaner.ipp  del_lexer_Token.cpp  del_lexer_Token.hpp  del_lexer_Token.ipp  del_lexer_WhitespaceScaner.cpp  del_lexer_WhitespaceScaner.hpp
src/del/math/: Makefile  Makefile.am  Makefile.in  del_math.cpp  del_math.dpp  del_math.hpp  del_math_Math.cpp  del_math_Math.hpp  del_math_Math.ipp  del_math_Signatures.cpp  del_math_Signatures.hpp  del_math_Signatures.ipp  del_math_Source.cpp  del_math_Source.hpp  del_math_Source.ipp  del_math_Theories.cpp  del_math_Theories.hpp  del_math_Theories.ipp
src/del/model/: Makefile  Makefile.am  Makefile.in  del_model.cpp  del_model.dpp  del_model.hpp  del_model_Mode.cpp  del_model_Mode.hpp  del_model_Structure.cpp  del_model_Structure.hpp
src/del/owl/: Makefile.am  Makefile.in  del_owl.cpp  del_owl.dpp  del_owl.hpp
src/del/parser/: Makefile.am  Makefile.in  del_parser.cpp  del_parser.dpp  del_parser.hpp  del_parser_Answer.cpp  del_parser_Answer.hpp  del_parser_Assertion.cpp  del_parser_Assertion.hpp  del_parser_Decompose.cpp  del_parser_Decompose.hpp  del_parser_Decomposition.cpp  del_parser_Decomposition.hpp  del_parser_Formula.cpp  del_parser_Formula.hpp  del_parser_Minimization.cpp  del_parser_Minimization.hpp  del_parser_Minimize.cpp  del_parser_Minimize.hpp  del_parser_Question.cpp  del_parser_Question.hpp  del_parser_Signature.cpp  del_parser_Signature.hpp  del_parser_Source.cpp  del_parser_Source.hpp  del_parser_Term.cpp  del_parser_Term.hpp  del_parser_Theory.cpp  del_parser_Theory.hpp
src/del/source/: Makefile  Makefile.am  Makefile.in  del_source.cpp  del_source.dpp  del_source.hpp  del_source_Answer.cpp  del_source_Answer.hpp  del_source_Assertion.cpp  del_source_Assertion.hpp  del_source_Comments.cpp  del_source_Comments.hpp  del_source_Decompose.cpp  del_source_Decompose.hpp  del_source_Decomposition.cpp  del_source_Decomposition.hpp  del_source_Expansion.cpp  del_source_Expansion.hpp  del_source_Minimization.cpp  del_source_Minimization.hpp  del_source_Minimize.cpp  del_source_Minimize.hpp  del_source_Question.cpp  del_source_Question.hpp  del_source_Signature.cpp  del_source_Signature.hpp  del_source_Source.cpp  del_source_Source.hpp  del_source_Theory.cpp  del_source_Theory.hpp
src/del/types/: Makefile  Makefile.am  Makefile.in  del_types.cpp  del_types.hpp
src/mdl/: Makefile.am  Makefile.in  mdl.cpp  mdl.dpp  mdl.hpp  mdl_Engine.cpp  mdl_Engine.hpp  mdl_macro.hpp  mdl_main.cpp
src/mdl/auxiliary/: Makefile.am  (+22 more)
src/mm/: Makefile.am  Makefile.in  mm.cpp  mm.dpp  mm.hpp  mm_Mm.cpp  mm_Mm.hpp  mm_main.cpp
src/nstd/: Makefile.am  Makefile.in  nstd  nstd.dpp  nstd.hpp  nstd.ipp  nstd.tpp  nstd_NameTable.cpp  nstd_NameTable.hpp  nstd_Object.cpp  nstd_Object.hpp  nstd_Static.cpp  nstd_Static.hpp  nstd_String.cpp  nstd_String.hpp  nstd_Undefined.hpp  nstd_chars.hpp  nstd_manipulator.cpp  nstd_manipulator.hpp  nstd_size.hpp  nstd_time.hpp
src/smm/: Makefile.am  Makefile.in  smm.cpp  smm.dpp  smm.hpp  smm_Smm.cpp  smm_Smm.hpp  smm_main.cpp
(+2333 files in other folders)
