SUBDIRS = \
	prover

EXTRA_DIST = \
	math.mm \
	grammar.corr \
	symbol.corr \
	prop.mm \
	prop_small.mm \
	prop_tiny.mm \
	\
	translation \
	dir_translation \
	dir_translation_old \
	implicit_step_proving \
	compression \
	proving \
	\
	\
	decompose.del \
	solve.del \
	\
	decomposition \
	solver

#	\
#	math-translate.bat \
#	prop-compress.bat \
#	prop-translate.bat \
#	prop-prove.bat \
#	\
#	mdl.exe \
#	metamath.exe \
#	mm.exe \
#	smm.exe
