EXTRA_DIST = \
	LICENSE.TXT

noinst_HEADERS = \
	mmcmdl.h \
	mmcmds.h \
	mmdata.h \
	mmhlpa.h \
	mmhlpb.h \
	mminou.h \
	mmmaci.h \
	mmpars.h \
	mmpfas.h \
	mmunif.h \
	mmutil.h \
	mmveri.h \
	mmvstr.h \
	mmword.h \
	mmwtex.h \
	\
	mmcmdl.c \
	mmcmds.c \
	mmdata.c \
	mmhlpa.c \
	mmhlpb.c \
	mminou.c \
	mmmaci.c \
	mmpars.c \
	mmpfas.c \
	mmunif.c \
	mmutil.c \
	mmveri.c \
	mmvstr.c \
	mmword.c \
	mmwtex.c \
	\
	metamath.c \
	mmall.h \
	mmall.c

bin_PROGRAMS = \
	metamath

metamath_SOURCES = \
	mmall.c
