SUBDIRS = \
	auxiliary \
	interface \
	lexer \
	math \
	model \
	owl \
	parser \
	source \
	types
	
AM_CPPFLAGS = \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/nstd \
	-I$(top_srcdir)/src/nsgl

bin_PROGRAMS = \
	del

noinst_HEADERS = \
	del_Del.hpp \
	del_Del.cpp \
	\
	del.dpp \
	del.hpp \
	del.cpp

del_SOURCES = \
	del_main.cpp
