SUBDIRS = \
	config \
	container \
	equation \
	interpolation \
	lexer \
	map \
	memory \
	misc \
	sampler \
	system \
	type

noinst_HEADERS = \
	nstd_chars.hpp \
	nstd_size.hpp \
	nstd_time.hpp \
	\
	nstd_manipulator.hpp \
	nstd_NameTable.hpp \
	nstd_Object.hpp \
	nstd_Static.hpp \
	nstd_String.hpp \
	nstd_Undefined.hpp \
	\
	nstd_manipulator.cpp \
	nstd_NameTable.cpp \
	nstd_Object.cpp \
	nstd_String.cpp \
	nstd_Static.cpp \
	\
	nstd.tpp \
	nstd.dpp \
	nstd.hpp \
	nstd.ipp \
	\
	nstd
