noinst_HEADERS = \
	del_auxiliary_Config.hpp \
	del_auxiliary_Error.hpp \
	del_auxiliary_Log.hpp \
	del_auxiliary_Output.hpp \
	del_auxiliary_Statistics.hpp \
	del_auxiliary_Statistics_Data.hpp \
	del_auxiliary_Table.hpp \
	del_auxiliary_Timers.hpp \
	del_auxiliary_Timers.ipp \
	del_auxiliary_Volume.hpp \
	\
	del_auxiliary_Config.cpp \
	del_auxiliary_Error.cpp \
	del_auxiliary_Log.cpp \
	del_auxiliary_Output.cpp \
	del_auxiliary_Statistics.cpp \
	del_auxiliary_Statistics_Data.cpp \
	del_auxiliary_Table.cpp \
	del_auxiliary_Timers.cpp \
	del_auxiliary_Volume.cpp \
	\
	del_auxiliary.hpp \
	del_auxiliary.dpp \
	del_auxiliary.cpp
