SUBDIRS = \
	model

noinst_HEADERS = \
	del_interface_Answer.hpp \
	del_interface_Assertion.hpp \
	del_interface_Cloneable.hpp \
	del_interface_Comments.hpp \
	del_interface_Decompose.hpp \
	del_interface_Decomposition.hpp \
	del_interface_Expansion.hpp \
	del_interface_Formula.hpp \
	del_interface_Minimize.hpp \
	del_interface_Minimization.hpp \
	del_interface_Object.hpp \
	del_interface_Question.hpp \
	del_interface_Signature.hpp \
	del_interface_Source.hpp \
	del_interface_Symbol.hpp \
	del_interface_Term.hpp \
	del_interface_Theory.hpp \
	del_interface_Writable.hpp \
	\
	del_interface_Formula.cpp \
	del_interface_Object.cpp \
	del_interface_Symbol.cpp \
	del_interface_Writable.cpp \
	\
	del_interface.dpp \
	del_interface.hpp \
	del_interface.cpp
