noinst_HEADERS = \
	del_lexer_CommentScaner.hpp \
	del_lexer_Lexer.hpp \
	del_lexer_Lexer.ipp \
	del_lexer_NameScaner.hpp \
	del_lexer_PathScaner.hpp \
	del_lexer_Scaner.hpp \
	del_lexer_Scaner.ipp \
	del_lexer_Token.hpp \
	del_lexer_Token.ipp \
	del_lexer_WhitespaceScaner.hpp \
	\
	del_lexer_CommentScaner.cpp \
	del_lexer_Lexer.cpp \
	del_lexer_Scaner.cpp \
	del_lexer_Token.cpp \
	del_lexer_WhitespaceScaner.cpp \
	\
	del_lexer.dpp \
	del_lexer.hpp \
	del_lexer.cpp
