noinst_HEADERS = \
	del_math_Math.hpp \
	del_math_Math.ipp \
	del_math_Signatures.hpp \
	del_math_Signatures.ipp \
	del_math_Source.hpp \
	del_math_Source.ipp \
	del_math_Theories.hpp \
	del_math_Theories.ipp \
	\
	del_math_Math.cpp \
	del_math_Signatures.cpp \
	del_math_Source.cpp \
	del_math_Theories.cpp \
	\
	del_math.dpp \
	del_math.hpp \
	del_math.cpp 
