noinst_HEADERS = \
	del_parser_Answer.hpp \
	del_parser_Assertion.hpp \
	del_parser_Decompose.hpp \
	del_parser_Decomposition.hpp \
	del_parser_Formula.hpp \
	del_parser_Minimize.hpp \
	del_parser_Minimization.hpp \
	del_parser_Question.hpp \
	del_parser_Signature.hpp \
	del_parser_Source.hpp \
	del_parser_Term.hpp \
	del_parser_Theory.hpp \
	\
	del_parser_Answer.cpp \
	del_parser_Assertion.cpp \
	del_parser_Decompose.cpp \
	del_parser_Decomposition.cpp \
	del_parser_Formula.cpp \
	del_parser_Minimize.cpp \
	del_parser_Minimization.cpp \
	del_parser_Question.cpp \
	del_parser_Signature.cpp \
	del_parser_Source.cpp \
	del_parser_Term.cpp \
	del_parser_Theory.cpp \
	\
	del_parser.dpp \
	del_parser.hpp \
	del_parser.cpp
