SUBDIRS = \
	formula \
	term

noinst_HEADERS = \
	del_source_Answer.hpp \
	del_source_Assertion.hpp \
	del_source_Comments.hpp \
	del_source_Decompose.hpp \
	del_source_Decomposition.hpp \
	del_source_Expansion.hpp \
	del_source_Minimize.hpp \
	del_source_Minimization.hpp \
	del_source_Question.hpp \
	del_source_Signature.hpp \
	del_source_Source.hpp \
	del_source_Theory.hpp \
	\
	del_source_Answer.cpp \
	del_source_Assertion.cpp \
	del_source_Comments.cpp \
	del_source_Decompose.cpp \
	del_source_Decomposition.cpp \
	del_source_Expansion.cpp \
	del_source_Minimize.cpp \
	del_source_Minimization.cpp \
	del_source_Question.cpp \
	del_source_Signature.cpp \
	del_source_Source.cpp \
	del_source_Theory.cpp \
	\
	del_source.dpp \
	del_source.hpp \
	del_source.cpp
