noinst_HEADERS = \
	allocator/del_types_allocator.hpp \
	array/del_types_array.hpp \
	chars/del_types_chars.hpp \
	exception/del_types_exception.hpp \
	index/del_types_index.hpp \
	index/undefined/del_types_index_undefined.hpp \
	lexer/del_types_lexer.hpp \
	list/del_types_list.hpp \
	list/connectivity/del_types_list_connectivity.hpp \
	manipulator/del_types_manipulator.hpp \
	map/del_types_map.hpp \
	pair/del_types_pair.hpp \
	pair/del_types_pair.cpp \
	set/del_types_set.hpp \
	set/index/del_types_set_index.hpp \
	set/value/del_types_set_value.hpp \
	storage/del_types_storage.hpp \
	value/del_types_value.hpp \
	value/pair/del_types_value_pair.hpp \
	value/undefined/del_types_value_undefined.hpp \
	vector/del_types_vector.hpp \
	vector/index/del_types_vector_index.hpp \
	vector/value/del_types_vector_value.hpp \
	\
	del_types.hpp \
	del_types.cpp
