SUBDIRS = \
	config \
	parameter \
	pool \
	statistics

noinst_HEADERS = \
	mdl_auxiliary_Error.hpp \
	mdl_auxiliary_Format.hpp \
	mdl_auxiliary_Log.hpp \
	mdl_auxiliary_Output.hpp \
	mdl_auxiliary_Pool.hpp \
	mdl_auxiliary_Pool.ipp \
	mdl_auxiliary_Symbol.hpp \
	mdl_auxiliary_Table.hpp \
	mdl_auxiliary_Timers.hpp \
	mdl_auxiliary_Volume.hpp \
	\
	mdl_auxiliary_Error.cpp \
	mdl_auxiliary_Format.cpp \
	mdl_auxiliary_Log.cpp \
	mdl_auxiliary_Output.cpp \
	mdl_auxiliary_Symbol.cpp \
	mdl_auxiliary_Table.cpp \
	mdl_auxiliary_Timers.cpp \
	mdl_auxiliary_Volume.cpp \
	\
	mdl_auxiliary.dpp \
	mdl_auxiliary.hpp \
	mdl_auxiliary.cpp
