SUBDIRS = \
	build \
	direction \
	iterator \
	node \
	parse \
	simify \
	unify

noinst_HEADERS = \
	mdl_expression_Array.hpp \
	mdl_expression_Branching.hpp \
	mdl_expression_Bush.hpp \
	mdl_expression_Forest.hpp \
	mdl_expression_Linear.hpp \
	mdl_expression_List.hpp \
	mdl_expression_Mode.hpp \
	mdl_expression_Substitution.hpp \
	mdl_expression_Substiunit.hpp \
	mdl_expression_Symbol.hpp \
	mdl_expression_Term.hpp \
	mdl_expression_Tree.hpp \
	\
	mdl_expression_Array.ipp \
	mdl_expression_Branching.ipp \
	mdl_expression_Bush.ipp \
	mdl_expression_Forest.ipp \
	mdl_expression_Linear.ipp \
	mdl_expression_List.ipp \
	mdl_expression_Mode.ipp \
	mdl_expression_Substitution.ipp \
	mdl_expression_Substiunit.ipp \
	mdl_expression_Symbol.ipp \
	mdl_expression_Term.ipp \
	mdl_expression_Tree.ipp \
	\
	mdl_expression_Symbol.cpp \
	\
	mdl_expression.dpp \
	mdl_expression.tpp \
	mdl_expression.hpp \
	mdl_expression.ipp \
	mdl_expression.cpp
