SUBDIRS = \
	block \
	evaluation \
	header \
	proof

noinst_HEADERS = \
	mdl_form_Comments.hpp \
	mdl_form_Contents.hpp \
	mdl_form_Identifiable.hpp \
	mdl_form_Identificator.hpp \
	mdl_form_Import.hpp \
	mdl_form_Source.hpp \
	mdl_form_Theory.hpp \
	\
	mdl_form_Comments.cpp \
	mdl_form_Contents.cpp \
	mdl_form_Identifiable.cpp \
	mdl_form_Identificator.cpp \
	mdl_form_Import.cpp \
	mdl_form_Source.cpp \
	mdl_form_Theory.cpp \
	\
	mdl_form.dpp \
	mdl_form.hpp \
	mdl_form.cpp
