SUBDIRS = \
	block \
	evaluation \
	header \
	object \
	proof

noinst_HEADERS = \
	mdl_interface_Comments.hpp \
	mdl_interface_Contents.hpp \
	mdl_interface_Components.hpp \
	mdl_interface_Identificator.hpp \
	mdl_interface_Import.hpp \
	mdl_interface_Source.hpp \
	mdl_interface_Theory.hpp \
	\
	mdl_interface.dpp \
	mdl_interface.hpp \
	mdl_interface.cpp
