noinst_HEADERS = \
	mdl_lexer_CommentScaner.hpp \
	mdl_lexer_HorisontalBarScaner.hpp \
	mdl_lexer_Lexer.hpp \
	mdl_lexer_Lexer.ipp \
	mdl_lexer_LiteralScaner.hpp \
	mdl_lexer_NameScaner.hpp \
	mdl_lexer_RealScaner.hpp \
	mdl_lexer_NumberScaner.hpp \
	mdl_lexer_Scaner.hpp \
	mdl_lexer_Scaner.ipp \
	mdl_lexer_Token.hpp \
	mdl_lexer_Token.ipp \
	mdl_lexer_WhitespaceScaner.hpp \
	\
	mdl_lexer_CommentScaner.cpp \
	mdl_lexer_Lexer.cpp \
	mdl_lexer_Scaner.cpp \
	mdl_lexer_Token.cpp \
	mdl_lexer_WhitespaceScaner.cpp \
	\
	mdl_lexer.dpp \
	mdl_lexer.hpp \
	mdl_lexer.cpp
