noinst_HEADERS = \
	mdl_math_Assertions.hpp \
	mdl_math_Constants.hpp \
	mdl_math_Defiendums.hpp \
	mdl_math_Expressions.hpp \
	mdl_math_Evaluations.hpp \
	mdl_math_Container.hpp \
	mdl_math_Math.hpp \
	mdl_math_Proofs.hpp \
	mdl_math_Propositions.hpp \
	mdl_math_Rules.hpp \
	mdl_math_Theories.hpp \
	mdl_math_Types.hpp \
	\
	mdl_math_Assertions.cpp \
	mdl_math_Constants.cpp \
	mdl_math_Container.cpp \
	mdl_math_Defiendums.cpp \
	mdl_math_Expressions.cpp \
	mdl_math_Evaluations.cpp \
	mdl_math_Math.cpp \
	mdl_math_Proofs.cpp \
	mdl_math_Propositions.cpp \
	mdl_math_Rules.cpp \
	mdl_math_Theories.cpp \
	mdl_math_Types.cpp \
	\
	mdl_math.dpp \
	mdl_math.hpp \
	mdl_math.cpp

