SUBDIRS = \
	block \
	evaluation \
	header \
	proof

noinst_HEADERS = \
	mdl_parser_Contents.hpp \
	mdl_parser_Expression.hpp \
	mdl_parser_Identificator.hpp \
	mdl_parser_Import.hpp \
	mdl_parser_Source.hpp \
	mdl_parser_Theory.hpp \
	\
	mdl_parser_Contents.cpp \
	mdl_parser_Expression.cpp \
	mdl_parser_Identificator.cpp \
	mdl_parser_Import.cpp \
	mdl_parser_Source.cpp \
	mdl_parser_Theory.cpp \
	\
	mdl_parser.dpp \
	mdl_parser.hpp \
	mdl_parser.cpp
