SUBDIRS = \
	data \
	evidence \
	interface \
	node \
	proof \
	run \
	strategy \
	tree

noinst_HEADERS = \
	mdl_prover_Exception.hpp \
	mdl_prover_Mode.hpp \
	mdl_prover_Prover.hpp \
	\
	mdl_prover_Exception.cpp \
	mdl_prover_Mode.cpp \
	mdl_prover_Prover.cpp \
	\
	mdl_prover.dpp \
	mdl_prover.hpp \
	mdl_prover.cpp
