noinst_HEADERS = \
	allocator/mdl_types_allocator.hpp \
	array/mdl_types_array.hpp \
	array/value/mdl_types_array_value.hpp \
	chars/mdl_types_chars.hpp \
	exception/mdl_types_exception.hpp \
	index/mdl_types_index.hpp \
	index/undefined/mdl_types_index_undefined.hpp \
	lexer/mdl_types_lexer.hpp \
	list/mdl_types_list.hpp \
	list/connectivity/mdl_types_list_connectivity.hpp \
	manipulator/mdl_types_manipulator.hpp \
	map/mdl_types_map.hpp \
	set/mdl_types_set.hpp \
	set/index/mdl_types_set_index.hpp \
	set/value/mdl_types_set_value.hpp \
	storage/mdl_types_storage.hpp \
	value/mdl_types_value.hpp \
	value/undefined/mdl_types_value_undefined.hpp \
	vector/mdl_types_vector.hpp \
	vector/index/mdl_types_vector_index.hpp \
	vector/value/mdl_types_vector_value.hpp \
	\
	mdl_types.hpp \
	mdl_types.cpp
