noinst_HEADERS = \
	mm_auxiliary_AxiomExtractor.hpp \
	mm_auxiliary_Config.hpp \
	mm_auxiliary_Corrector.hpp \
	mm_auxiliary_Corrector_Grammar.hpp \
	mm_auxiliary_Corrector_Symbol.hpp \
	mm_auxiliary_Error.hpp \
	mm_auxiliary_Name.hpp \
	mm_auxiliary_Output.hpp \
	mm_auxiliary_Symbol.hpp \
	mm_auxiliary_Table.hpp \
	mm_auxiliary_Timers.hpp \
	mm_auxiliary_Volume.hpp \
	\
	mm_auxiliary_Config.ipp \
	mm_auxiliary_Name.ipp \
	mm_auxiliary_Symbol.ipp \
	mm_auxiliary_Table.ipp \
	mm_auxiliary_Timers.ipp \
	\
	mm_auxiliary_AxiomExtractor.cpp \
	mm_auxiliary_Config.cpp \
	mm_auxiliary_Corrector.cpp \
	mm_auxiliary_Corrector_Grammar.cpp \
	mm_auxiliary_Corrector_Symbol.cpp \
	mm_auxiliary_Error.cpp \
	mm_auxiliary_Output.cpp \
	mm_auxiliary_Table.cpp \
	mm_auxiliary_Timers.cpp \
	mm_auxiliary_Volume.cpp \
	\
	mm_auxiliary.dpp \
	mm_auxiliary.hpp \
	mm_auxiliary.cpp
