noinst_HEADERS = \
	mm_expression_Expression.hpp \
	mm_expression_Expression.ipp \
	mm_expression_Expression.cpp \
	mm_expression_Substitution.hpp \
	mm_expression_Substitution.ipp \
	mm_expression_Substitution.cpp \
	mm_expression_Symbol.hpp \
	mm_expression_Symbol.ipp \
	\
	mm_expression.dpp \
	mm_expression.hpp \
	mm_expression.cpp
