noinst_HEADERS = \
	mm_lexer_CommentScaner.hpp \
	mm_lexer_IdentificatorScaner.hpp \
	mm_lexer_Lexer.hpp \
	mm_lexer_Lexer.ipp \
	mm_lexer_Lexer.cpp \
	mm_lexer_LiteralScaner.hpp \
	mm_lexer_PathScaner.hpp \
	mm_lexer_Scaner.hpp \
	mm_lexer_Token.hpp \
	mm_lexer_Token.ipp \
	mm_lexer_WhitespaceScaner.hpp \
	\
	mm_lexer_CommentScaner.cpp \
	mm_lexer_Scaner.cpp \
	mm_lexer_Token.cpp \
	mm_lexer_WhitespaceScaner.cpp \
	\
	mm_lexer.dpp \
	mm_lexer.hpp \
	mm_lexer.cpp
