noinst_HEADERS = \
	allocator/mm_types_allocator.hpp \
	chars/mm_types_chars.hpp \
	exception/mm_types_exception.hpp \
	index/mm_types_index.hpp \
	index/undefined/mm_types_index_undefined.hpp \
	lexer/mm_types_lexer.hpp \
	list/mm_types_list.hpp \
	list/connectivity/mm_types_list_connectivity.hpp \
	manipulator/mm_types_manipulator.hpp \
	stack/mm_types_stack.hpp \
	storage/mm_types_storage.hpp \
	value/mm_types_value.hpp \
	value/undefined/mm_types_value_undefined.hpp \
	vector/mm_types_vector.hpp \
	\
	mm_types.hpp \
	mm_types.cpp
