SUBDIRS = \
	option

noinst_HEADERS = \
	nstd_config_Base.hpp \
	nstd_config_Config.hpp \
	nstd_config_General.hpp \
	nstd_config_List.hpp \
	nstd_config_MemoryInfo.hpp \
	nstd_config_Paths.hpp \
	nstd_config_ProgramInfo.hpp \
	\
	nstd_config_Base.cpp \
	nstd_config_Config.cpp \
	nstd_config_General.cpp \
	nstd_config_List.cpp \
	nstd_config_MemoryInfo.cpp \
	nstd_config_Paths.cpp \
	nstd_config_ProgramInfo.cpp \
	\
	nstd_config.dpp \
	nstd_config.hpp \
	nstd_config.cpp
