SUBDIRS = \
	continual \
	discrete \
	storage 

noinst_HEADERS = \
	nstd_container_Array.hpp \
	nstd_container_Bit.hpp \
	nstd_container_List.hpp \
	nstd_container_Pair.hpp \
	nstd_container_Set.hpp \
	nstd_container_Stack.hpp \
	nstd_container_Vector.hpp \
	\
	nstd_container_Array.cpp \
	nstd_container_Bit.cpp \
	nstd_container_List.cpp \
	nstd_container_Pair.cpp \
	nstd_container_Set.cpp \
	nstd_container_Stack.cpp \
	nstd_container_Vector.cpp \
	\
	nstd_container.dpp \
	nstd_container.hpp \
	nstd_container.cpp
